# disco_slam_note

./: CMakeLists.txt  README.md  UE5.sh  package.xml
.github/: copilot-instructions.md
config/: DATASET_PREPARATION.md  consistency_matrixgensui.clq.mtx  consistency_matrixjackal1.clq.mtx  gen_imu.txt  gicp.yaml  params.yaml  params_k.yaml  params_nclt.yaml  params_ue.yaml  params_ue_1.yaml  pose.json  sensordata_to_rosbag_liosam.py  xian_imu.txt
config/topic_node/: topiclist.txt
include/: fast_gicp.h  utility.h
launch/: run.launch  run_double.launch  run_dynamic.launch  run_fusion.launch  run_multi.launch  run_ue_1.launch  save_pcd.launch  save_pcd_erasor.launch
launch/include/: module_loam.launch  module_loam_ue5.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch  module_rviz_ue.launch  module_rviz_ue_1.launch  single_loam.launch
launch/include/config/: rviz.rviz  rviz1.rviz  rviz_gensui.rviz  rviz_ue.rviz  rviz_ue_1.rviz  rviz_up.rviz  rviz_xianfeng.rviz
msg/: cloud_info.msg  context_info.msg  ring_cloud_info.msg
src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  save_pcd.cpp  save_pcd_erasor.cpp
src/DiSCo-SLAM/: README.md  mapFusion.cpp
src/DiSCo-SLAM/config/: mapfusion.yaml  mapfusion_k.yaml  mapfusion_ue.yaml  mapfusion_ue_1.yaml
src/DiSCo-SLAM/config/devel/: cloud_info.h  context_info.h
src/DiSCo-SLAM/third_parties/fast_max-clique_finder/src/: findClique.cpp  findClique.h  graphIO.cpp  graphIO.h
src/DiSCo-SLAM/third_parties/scanContext/: scanContext.cpp  scanContext.h
